[gd_scene load_steps=5 format=3 uid="uid://dtreko6mg6eyi"]

[ext_resource type="Script" path="res://ui/MainMenu/MainMenu.gd" id="1_2jo8g"]
[ext_resource type="Shader" path="res://shader/texture_remap.gdshader" id="1_ghejv"]
[ext_resource type="Texture2D" uid="uid://ch76m21gtrq87" path="res://assets/graphics/monochrome-transparent_packed.png" id="2_ojcsp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxm0f"]
shader = ExtResource("1_ghejv")
shader_parameter/region = Vector4(512, 112, 16, 16)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jo8g")

[node name="Main" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="Main"]
offset_left = 281.0
offset_top = 112.0
offset_right = 359.0
offset_bottom = 248.0

[node name="Start" type="Button" parent="Main/Menu"]
offset_right = 78.0
offset_bottom = 31.0
text = "Start"
flat = true
alignment = 0

[node name="Options" type="Button" parent="Main/Menu"]
offset_top = 35.0
offset_right = 78.0
offset_bottom = 66.0
text = "Options"
flat = true
alignment = 0

[node name="Stats" type="Button" parent="Main/Menu"]
offset_top = 70.0
offset_right = 78.0
offset_bottom = 101.0
text = "Statistics"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="Main/Menu"]
offset_top = 105.0
offset_right = 78.0
offset_bottom = 136.0
text = "Quit"
flat = true
alignment = 0

[node name="WeaponPointer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 109.0
offset_top = 173.0
offset_right = 149.0
offset_bottom = 213.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="WeaponPointer"]
material = SubResource("ShaderMaterial_xxm0f")
offset_left = 70.0
offset_top = -108.0
offset_right = 110.0
offset_bottom = -68.0
rotation = 0.752658
scale = Vector2(3.96, 3.72)
mouse_filter = 2
texture = ExtResource("2_ojcsp")
ignore_texture_size = true

[connection signal="pressed" from="Main/Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main/Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Menu/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="Main/Menu/Quit" to="." method="_on_quit_pressed"]
